--- a/src/kits/riot/theme/effects.css
+++ b/src/kits/riot/theme/effects.css
@@ -182,11 +182,8 @@
   font-family: var(--riot-font-display);
   color: var(--riot-primary);
 }
-.riot-list-item .riot-list-item__text {
+.riot-list-item__text {
   position: relative;
-  flex: 0 1 auto;
-  min-width: 0;
-  margin-inline-end: auto;
 }
 .riot-list-item[data-highlighted]:not([data-disabled]) .riot-list-item__text::before,
 .riot-list-item[data-popup-open] .riot-list-item__text::before {
@@ -194,19 +191,13 @@
   position: absolute;
   z-index: -1;
   left: -12px;
-  width: calc(100% + 38px);
+  right: 0;
   top: 50%;
   height: 38px;
   transform: translateY(-50%);
   background: var(--riot-marker-color, var(--riot-warning));
-  -webkit-mask:
-    var(--riot-marker-swipe) 0 50% / 100% 100% no-repeat,
-    linear-gradient(90deg, #000 0 45%, transparent) no-repeat;
-  -webkit-mask-composite: source-in;
-  mask:
-    var(--riot-marker-swipe) 0 50% / 100% 100% no-repeat,
-    linear-gradient(90deg, #000 0 45%, transparent) no-repeat;
-  mask-composite: intersect;
+  -webkit-mask: var(--riot-marker-swipe) 0 50% / 72% 100% no-repeat;
+  mask: var(--riot-marker-swipe) 0 50% / 72% 100% no-repeat;
 }
 .riot-list-item[data-disabled] {
   opacity: var(--riot-disabled-opacity);
